tests/negative/lexer/camelCase.orng
fn main() -> Int {
    let CamelCase = 0
    CamelCase
}